# NoobSolitarie

./: .cproject  .gitignore  .project  README.md
src/: Board.cpp  Board.h  CMakeLists.txt  Card.cpp  Card.h  Controller.cpp  Controller.h  Deck.cpp  Deck.h  Definitions.h  Foundation.cpp  Foundation.h  Game.cpp  Game.h  IO.cpp  IO.h  Node.cpp  Node.h  NoobSolitarie.cpp  NoobSolitarie.h  NoobSoltaire.cpp  Pile.cpp  Pile.h  RemainderDeck.cpp  RemainderDeck.h  Stack.cpp  Stack.h  StackAddable.cpp  StackAddable.h  Stock.cpp  Stock.h  Suit.cpp  Suit.h  Tableau.cpp  Tableau.h  main.cpp
src/Cards/: Card.cpp  Card.h  Deck.tpp  Number.cpp  Number.h  NumberPoker.cpp  NumberPoker.h  Suit.cpp  Suit.h  SuitPoker.cpp  SuitPoker.h
src/Controllers/: ActionController.h  ActionControllerVisitor.h  CMakeLists.txt  CardChoice.cpp  CardChoice.h  Controller.cpp  Controller.h  Error.cpp  Error.h  FlipController.cpp  FlipController.h  InitialGameDecition.h  InitialGameDecitionController.h  Logic.cpp  Logic.h  MoveController.cpp  MoveController.h  OperationController.h  OperationControllerVisitor.h  PutCardController.h  PutCardInFoundationController.h  PutCardInTableauController.h  RedoController.h  StartController.cpp  StartController.h  TakeCardController.h  TakeCardFromFoundationController.h  TakeCardFromStockController.h  TakeCardFromTableauController.h  UndoController.h
src/Controllers/Local/: ActionController.cpp  ActionController.h  ActionControllerBuilder.cpp  ActionControllerBuilder.h  CMakeLists.txt  Controller.cpp  Controller.h  FlipController.cpp  FlipController.h  InitialGameDecitionController.cpp  InitialGameDecitionController.h  Logic.cpp  Logic.h  MoveController.cpp  MoveController.h  OperationController.cpp  OperationController.h  PutCardController.cpp  PutCardController.h  PutCardInFoundationController.cpp  PutCardInFoundationController.h  PutCardInTableauController.cpp  PutCardInTableauController.h  RedoControlle.cpp  RedoController.cpp  RedoController.h  StartController.cpp  StartController.h  TakeCardController.cpp  TakeCardController.h  TakeCardFromFoundationController.cpp  TakeCardFromFoundationController.h  TakeCardFromStockController.cpp  TakeCardFromStockController.h  TakeCardFromTableauController.cpp  TakeCardFromTableauController.h  UndoController.cpp  UndoController.h
src/Models/: Board.cpp  Board.h  BoardBuilder.cpp  BoardBuilder.h  CMakeLists.txt  Deck.cpp  Deck.h  Definitions.h  Foundation.cpp  Foundation.h  Game.cpp  Game.h  Stack.cpp  Stack.h  StackAddable.cpp  StackAddable.h  State.h  Stock.cpp  Stock.h  Tableau.cpp  Tableau.h
src/Models/Cards/: CMakeLists.txt  Card.cpp  Card.h  Number.cpp  Number.h  Suit.cpp  Suit.h
src/Models/Memento/: BoardMemento.cpp  BoardMemento.h  BoardMementoCareTaker.cpp  BoardMementoCareTaker.h  CMakeLists.txt  FoundationMemento.cpp  FoundationMemento.h  StockMemento.cpp  StockMemento.h  TableauMemento.cpp  TableauMemento.h
src/Utils/: CMakeLists.txt  ClosedInterval.cpp  ClosedInterval.h  LimitedIntDialog.cpp  LimitedIntDialog.h  Node.h  Stack.h  Stack.tpp
src/Views/: CMakeLists.txt  ModelView.h  OperationControllerView.h
src/Views/Console/: ActionView.cpp  ActionView.h  BoardView.cpp  BoardView.h  CMakeLists.txt  CardChoiceView.cpp  CardChoiceView.h  CardView.cpp  CardView.h  ClosedIntervalView.cpp  ClosedIntervalView.h  FlipView.cpp  FlipView.h  FoundationView.cpp  FoundationView.h  GameView.cpp  GameView.h  LimitedIntDialogView.cpp  LimitedIntDialogView.h  MoveView.cpp  MoveView.h  NoobSolitarieView.cpp  NoobSolitarieView.h  NumberView.cpp  NumberView.h  PutCardInFoundationView.cpp  PutCardInFoundationView.h  PutCardInTableauView.cpp  PutCardInTableauView.h  PutCardView.h  StartView.cpp  StartView.h  StockView.cpp  StockView.h  SuitView.cpp  SuitView.h  TableauView.cpp  TableauView.h  TakeCardFromFoundationView.cpp  TakeCardFromFoundationView.h  (+5 more)
src/Views/Console/ControllersViews/: ActionView.cpp  ActionView.h  CMakeLists.txt  FlipView.cpp  FlipView.h  InitialGameDecitionView.cpp  InitialGameDecitionView.h  MoveView.cpp  MoveView.h  PutCardInFoundationView.cpp  PutCardInFoundationView.h  PutCardInTableauView.cpp  PutCardInTableauView.h  PutCardView.h  StartView.cpp  StartView.h  TakeCardFromFoundationView.cpp  TakeCardFromFoundationView.h  TakeCardFromStockView.cpp  TakeCardFromStockView.h  TakeCardFromTableauView.cpp  TakeCardFromTableauView.h  TakeCardView.h
src/Views/Console/ModelsViews/: BoardView.cpp  BoardView.h  CMakeLists.txt  CardChoiceView.cpp  CardChoiceView.h  CardView.cpp  CardView.h  ClosedIntervalView.cpp  ClosedIntervalView.h  FoundationView.cpp  FoundationView.h  InitialGameDecitionNameView.cpp  InitialGameDecitionNameView.h  LimitedIntDialogView.cpp  NumberView.cpp  (+8 more)
src/utils/: IO.cpp  IO.h  Node.tpp
